# ChineseHistoryTrival

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: ci.yml
.omc/: prd.json  project-memory.json
.omc/sessions/: cc3ac709-87d2-4d92-abc4-c243e2fb97c5.json
.omc/state/: mission-state.json
.omc/state/checkpoints/: checkpoint-2026-04-25T18-20-44-718Z.json
android/app/: build.gradle.kts
assets/data/: han_dynasty_locations.json  han_historical_figures.json  han_travel_routes.json  history_cards.json  song_dynasty_locations.json  tang_dynasty_locations.json
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: geofence.py  image.py  matching.py  merchants.py  routes.py  summary.py  trips.py
backend/app/models/: __init__.py  base.py  location.py  merchant.py  trip.py
backend/app/schemas/: __init__.py  location.py  merchant.py  trip.py
backend/app/services/: __init__.py  geofence.py  image_gen.py  llm.py  matchmaking.py  tools.py
backend/app/services/agents/: __init__.py  base.py  hub.py  route_planning.py  summary.py  trip_planning.py
backend/migrations/: env.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/router/: app_router.dart
lib/core/services/: notification_service.dart
lib/core/theme/: app_colors.dart  app_theme.dart  app_typography.dart
lib/core/widgets/: classical_app_bar.dart  classical_card.dart  dynasty_badge.dart  favorite_button.dart  (+7 more)
test/: widget_test.dart
(+102 files in other folders)
